test/files/neg/qmark-deprecated.check
qmark-deprecated.scala:4: error: using `?` as a type name requires backticks.
class Foo[?] // error
          ^
qmark-deprecated.scala:6: error: using `?` as a type name requires backticks.
class Bar[M[?] <: List[?]] // errors
            ^
qmark-deprecated.scala:10: error: using `?` as a type name requires backticks.
  class ? { val x = 1 } // error
        ^
qmark-deprecated.scala:16: error: using `?` as a type name requires backticks.
  trait ? // error
        ^
qmark-deprecated.scala:22: error: using `?` as a type name requires backticks.
  type ? = Int // error
       ^
qmark-deprecated.scala:33: error: using `?` as a type name requires backticks.
  def bar1[?] = {} // error
           ^
qmark-deprecated.scala:35: error: using `?` as a type name requires backticks.
  def bar3[M[?]] = {} // error
             ^
qmark-deprecated.scala:38: error: using `?` as a type name requires backticks.
  type A[?] = Int // error
         ^
qmark-deprecated.scala:6: warning: `?` in a type will be interpreted as a wildcard in the future, wrap it in backticks to keep the current meaning.
class Bar[M[?] <: List[?]] // errors
                       ^
qmark-deprecated.scala:27: warning: `?` in a type will be interpreted as a wildcard in the future, wrap it in backticks to keep the current meaning.
  val x: Array[?] = new Array[?](0) // errors
               ^
qmark-deprecated.scala:27: warning: `?` in a type will be interpreted as a wildcard in the future, wrap it in backticks to keep the current meaning.
  val x: Array[?] = new Array[?](0) // errors
                              ^
qmark-deprecated.scala:30: warning: `?` in a type will be interpreted as a wildcard in the future, wrap it in backticks to keep the current meaning.
  def foo1[T <: Array[?]](x: T): Array[?] = x // errors
                      ^
qmark-deprecated.scala:30: warning: `?` in a type will be interpreted as a wildcard in the future, wrap it in backticks to keep the current meaning.
  def foo1[T <: Array[?]](x: T): Array[?] = x // errors
                                       ^
5 warnings
8 errors
